--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github-cli-chat",
+  "name": "terminal-git-chat",
   "version": "1.0.0",
   "description": "A CLI chat application that uses GitHub as a message database and request processing",
   "main": "chat.js",
